[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apidownload"
version = "0.0.0"
authors = [
  { name="Joe Greaves" },
]
description = "Download the data from an API endpoint to a file"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.scripts]
apidownload = "apidownload.__main__.main"

[project.urls]
"Homepage" = "https://github.com/Grvs44/API-Download"

[tool.setuptools]
include-package-data = true
